# tickle-cli

./: CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  ruff.toml  test-checkbox-spacing.md  tickle.toml  tickle.toml.example
.github/workflows/: ci.yml  release.yml  test.yml
src/tickle/: __init__.py  __main__.py  cli.py  config.py  detectors.py  git_utils.py  models.py  output.py  scanner.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_git_utils.py  test_output.py  test_scanner.py
tests/fixtures/: test-checkbox.md
