[project]
name = "tickle"
version = "0.1.0"
description = "Scan repositories for outstanding developer tasks"
authors = [
    {name = "Tickle Contributors"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0"
]

[project.scripts]
tickle = "tickle.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
