[project]
name = "tickle"
version = "0.1.0"
description = "Hierarchical visualization of developer tasks across code repositories"
authors = [
    {name = "Tickle Contributors"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "humanize>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[project.scripts]
tickle = "tickle.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=tickle --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
